update map custom (Taxi Company)

--- a/server.cfg
+++ b/server.cfg
@@ -20,7 +20,7 @@ ackslimit 3000
 useartwork 1
 gamemode0 main 1
 filterscripts 
-plugins crashdetect nativechecker mysql whirlpool sscanf streamer
+plugins mysql whirlpool sscanf streamer
 onfoot_rate 40
 incar_rate 40
 weapon_rate 40
