Dynamic Door Complete

--- a/server.cfg
+++ b/server.cfg
@@ -1,6 +1,6 @@
 echo Executing Server Config...
 lanmode 0
-hostname New Base OMPVN.COM
+hostname Sever Test Dev Code
 weburl 
 mapname San Andreas
 language VietNamese
@@ -10,7 +10,6 @@ maxplayers 100
 port 7777
 maxnpc 0
 rcon 0
-chatlogging 0
 announce 1
 query 1
 lagcompmode 1
